tests/baselines/reference/dynamicImportTrailingComma.errors.txt
tests/cases/compiler/dynamicImportTrailingComma.ts(2,12): error TS1009: Trailing comma not allowed.


==== tests/cases/compiler/dynamicImportTrailingComma.ts (1 errors) ====
    const path = './foo';
    import(path,);
               ~
!!! error TS1009: Trailing comma not allowed.